Replace files with new ones

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <h2 class="font-size-8 md-font-size-16 text-white mb-4 font-bold w-full sm-w-70p md-w-60p lg-w-50p">Building Dreams, <span class="text-primary">Delivering Excellence</span></h2>
       <p class="font-size-8 md-font-size-16 text-white mb-6 font-bold text-white w-full sm-w-70p md-w-60p lg-w-50p">Your trusted engineering partner.</p>
       <div class="d-flex gap-4 mt-4 w-full sm-w-70p md-w-60p items-center justify-center">
-        <a href="contact.html" class="btn bg-primary px-8 py-4 text-white">Request A Quote</a>
+        <a href="mailto:zibraplanet@gmail.com" class="btn bg-primary px-8 py-4 text-white">Request A Quote</a>
       </div>
       
     </div>
@@ -227,7 +227,7 @@
     <div class="d-flex w-full items-center justify-center bg-secondary px-4 md-px-24 lg-px-32 py-12">
       <div class="d-flex w-full flex-col md-flex-row gap-2 items-center justify-between text-center">
         <h3 class="text-white font-bold font-size-8 md-font-size-12">Let's get started</h3>
-        <a href="contact.html" class="btn bg-primary px-8 py-4 text-white mt-4">Request A Quote</a>
+        <a href="mailto:zibraplanet@gmail.com" class="btn bg-primary px-8 py-4 text-white mt-4">Request A Quote</a>
       </div>
     </div>
   </section>
@@ -268,7 +268,7 @@
       <div class="d-flex w-auto flex-col gap-2 items-center justify-center text-center">
         <h3 class="text-white font-bold font-size-8 md-font-size-12">Stop Dreaming. Start Building.</h3>
         <p class="text-white">From concept to construction — we don’t just talk plans, we make them real.</p>
-        <a href="contact.html" class="btn bg-primary px-8 py-4 text-white mt-4">Request A Quote</a>
+        <a href="mailto:zibraplanet@gmail.com" class="btn bg-primary px-8 py-4 text-white mt-4">Request A Quote</a>
       </div>
     </div>
   </section>
