--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
       <div class="d-flex w-auto flex-col gap-2 items-center justify-center text-center">
         <h3 class="text-white font-bold font-size-8 md-font-size-12">Stop Dreaming. Start Building.</h3>
         <p class="text-white">From concept to construction — we don’t just talk plans, we make them real.</p>
-        <a href="contact.html" class="btn bg-primary px-8 py-4 text-white mt-4">Request A Quote</a>
+        <a href="mailto:zibraplanet@gmail.com" class="btn bg-primary px-8 py-4 text-white mt-4">Request A Quote</a>
       </div>
     </div>
   </section>
