added new files

--- a/projects.html
+++ b/projects.html
@@ -194,6 +194,12 @@
         <div class="lz-project-item">
           <img src="assets/images/projects/project-30.jpeg" alt="Project 7">
         </div>
+        <div class="lz-project-item">
+          <img src="assets/images/projects/project-31.jpg" alt="Project 7">
+        </div>
+        <div class="lz-project-item">
+          <img src="assets/images/projects/project-32.jpg" alt="Project 7">
+        </div>
       </div>
     </div>
 
